# asset-tracker

./: .gitignore  .gitlab-ci  .gitlab-ci.yml  .pylintrc  CHANGES.md  CHANGES.txt  DEPLOYMENTS.txt  Dockerfile  MANIFEST.in  README.md  README.txt  Vagrantfile  development.ini  development.ini.sample  docker-compose.override.yml  docker-compose.override.yml.sample  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.dev.sh.sample  docker-entrypoint.sh  equipments_families.json  production.ini  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  supervisord.conf  tests.ini  vagrant.sh
alembic/: env.py
alembic/versions/: 02e734fff014_add_calibration_frequency.py  083c623dbc61_add_consumable_families_equipment_.py  0a5fb17fc85e_add_asset_type.py  199b80115867_remove_equipment_expiration_dates.py  20d6bddc809a_fix_bug_with_creator_id.py  2280798107fc_update_tenant_constraints.py  2348c02fda72_filter_order_history.py  279b6709d0c0_add_status_class.py  40967a8ed62c_remove_asset_calibration_next.py  49e3635c66c5_add_site_object.py  52f92ee869a0_fix_equipments_families.py  56499a75c3c6_add_asset_config.py  5987feade5e7_site_id_must_never_be_null.py  5d889b6e1931_add_asset_mac_wifi_ethernet.py  6715e132d14a_add_status_label_marlink.py  67ca562dfc8c_migrate_event_status.py  70292af6fd9e_add_site_id.py  72daf9faa92b_make_asset_id_unique.py  759b7ea9cbb1_add_site_object.py  80c54335e8c0_add_status_type.py  843bfa914d35_.py  98040f2be9fd_add_data_to_event.py  b53983edfa7a_add_information_to_asset_user_id.py  c1048d8d385e_remove_next_calibration.py  c8984e73a5de_status_and_calibration_next_as_columns.py  c915540f60cb_add_hardware_version.py  cd58dc1487e1_add_expiration_date_to_equipment.py  cf8b307316af_add_software_version.py  e0bff73fff9c_refactor_tenant_id.py  e48836ce2279_0_9.py  e8996138f616_add_tenant_name.py  ea12469de59d_add_consumable_and_consumable_family.py  ec14e51642fc_add_information_to_asset_link_user_id.py  f22d6bf9b6b6_add_extra_to_event.py  ff4036f5cdd6_create_tenantinfo.py
asset_tracker/: __init__.py  api.py  celery_tasks.py  config.json  config.py  configuration.json  configuration.py  constants.py  equipments_families.json  models.py  notifications.py  notify.py  openid_connect.py  openid_connect_client.py  renderers.py  tests.py  views.py  views_asset.py  views_site.py  views_utilities.py
asset_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
asset_tracker/api/: __init__.py  assets.py  datatables.py  sites.py  software.py
asset_tracker/celery/: __init__.py  reminders.py  tasks.py
asset_tracker/js/: .eslintrc  asset_tracker.js
asset_tracker/locale/: babel.ini  babel_extract_mapping.txt  messages.pot  update.sh
asset_tracker/locale/en/LC_MESSAGES/: messages.mo  messages.po
asset_tracker/models/: __init__.py  asset_tracker.py  meta.py
asset_tracker/notifications/: __init__.py  assets.py
asset_tracker/sass/: _datatables.scss  _main.scss  airbus.scss  main.scss  marlink.scss  parsys.scss  parsys_cloud.scss
asset_tracker/sass/bootstrap/: _dropdowns.scss  _variables.scss
asset_tracker/sass/branding/: airbus.scss  parsys_cloud.scss
asset_tracker/scripts/: 2017-01-27_cma_import.py  2017-04-14_cleanup.py  2018-01-03_restore_sites.py  2018-07-24_export_sites.py  2019-12-19_migrate_equipment_expiration_dates.py  2021-05-04_remove_sites.py  2021-10-14_sort_equipments.py  2022-02-03_remove_null_configs.py  2022-02-14_update_calibration_next.py  cleanup.py  cma.py  initializedb.py  migration_addsiteid.py  restore_sites.py
asset_tracker/static/scripts/: asset_tracker.js  asset_tracker.min.js  asset_tracker.min.js.map  datatables.js
asset_tracker/static/styles/: airbus.css  airbus.css.map  main.css  main.css.map  marlink.min.css  marlink.min.css.map  parsys.min.css  parsys.min.css.map  parsys_cloud.css  parsys_cloud.css.map  parsys_cloud.min.css  parsys_cloud.min.css.map
asset_tracker/templates/: assets-create_update.html  assets-list.html  base.html  macros.html  menu.html  sites-create_update.html  sites-information.html  sites-list.html
asset_tracker/templates/branding/: footer-marlink.html
asset_tracker/templates/emails/: assets_calibration.html  assets_calibration.txt  calibration_reminder.html  calibration_reminder.txt  consumables_expiration.html  consumables_expiration.txt
asset_tracker/templates/errors/: 403.html  404.html  500.html  login-timeout.html
asset_tracker/templates/pages/: assets-create_update.html  assets-list.html  settings.html  sites-create_update.html  sites-list.html
asset_tracker/tests/: __init__.py  test_api.py  test_extract.py  test_login.py  test_post_new_software.py
asset_tracker/tests/a_porter/: example.py  post_new_software.py
asset_tracker/tests/files/: test_post_new_software.json
asset_tracker/utilities/: authorization.py  domain_model.py  notifications.py
asset_tracker/views/: __init__.py  assets.py  extract.py  sites.py  utilities.py
config/: development.ini.sample  production.ini  tests.ini
docs/: rights_list.md  software_update.md
migrations/: env.py
migrations/versions/: 02e734fff014_add_calibration_frequency.py  0a5fb17fc85e_add_asset_type.py  20d6bddc809a_fix_bug_with_creator_id.py  2348c02fda72_filter_order_history.py  279b6709d0c0_add_status_class.py  843bfa914d35_.py  c1048d8d385e_remove_next_calibration.py  c8984e73a5de_status_and_calibration_next_as_columns.py  cf8b307316af_add_software_version.py  e48836ce2279_0_9.py
py-openid-connect/: requirements.txt  setup.py
py-openid-connect/py_openid_connect/: __init__.py  openid_connect.py  openid_connect_client.py
tracking/: __init__.py  api.py  models.py  tests.py  views.py
tracking.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tracking/sass/: main.scss
tracking/scripts/: initializedb.py
tracking/static/scripts/: datatables.js
tracking/static/styles/: datatables.css  main.css  main.css.map
tracking/templates/: assets-create_update.html  base.html  menu.html  mytemplate.pt
tracking/templates/errors/: 403.html  404.html  500.html
(+2 files in other folders)
