[build-system]
requires = [
    'setuptools==69.0.3',
    'setuptools-scm==8.0.4',
    'wheel==0.42.0',
]
build-backend = 'setuptools.build_meta'

[project]
name = 'asset-tracker'
description = 'Asset Tracker'
requires-python = '>=3.12'
keywords = ['web', 'pyramid', 'pylons']
authors = [
  {email = 'info@parsys.com'},
  {name = 'Parsys'},
]
license = {text = 'Other/Proprietary License'}
classifiers = [
    'Framework :: Pyramid',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: WSGI :: Application',
]
dependencies = [
    'alembic==1.13.1',
    'celery[redis]==5.3.6',
    'filedepot==0.10.0',
    'jinja2==3.1.3',
    'packaging==23.2',
    'parsys-utilities~=4.8.2',
    'paste==3.7.1',
    'psycopg2==2.9.9',
    'pyramid==1.10.8',
    'pyramid-jinja2==2.10.0',
    'pyramid-session-redis==1.6.3',
    'pyramid-tm==2.5',
    'python-dateutil==2.8.2',
    'sentry-sdk==1.39.2',
    'sqlalchemy==1.4.51',
    'transaction==4.0',
    'waitress==2.1.2',
    'zope.sqlalchemy==3.1',
]
dynamic = ['readme', 'version']

[project.optional-dependencies]
dev = [
    'babel==2.14.0',
    'pybabel-json-md==0.1.0',
    'pyramid-debugtoolbar==4.10',
]
qa = [
    'flake8==7.0.0',
    'flake8-pyproject==1.2.3',
]
tests = [
    'parsys-utilities[tests]~=4.8.0',
    'pytest==7.4.4',
    'pytest-cov==4.1.0',
    'pytest-xdist[psutil]==3.5.0',
]

[project.urls]
homepage = 'https://parsys.com'

[project.entry-points.'paste.app_factory']
main = 'asset_tracker:main'

[project.scripts]
parsys_healthcheck = 'parsys_utilities.status:healthcheck'

[tool.flake8]
doctests = true
max-line-length = 120
statistics = true

[tool.setuptools.dynamic]
readme = {file = ['README.md', 'CHANGES.md']}

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['asset_tracker*']
exclude = ['asset_tracker.scripts*', 'asset_tracker.tests*']

[tool.setuptools.package-data]
'asset_tracker' = ['config.json', 'locale/**/*.mo', 'static/**', 'templates/**']

[tool.setuptools_scm]
version_scheme = 'no-guess-dev'
